--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,20 @@
+*{
+    box-sizing: border-box;
+}
 #navH{
     color: white;
     margin: auto;
+    padding-bottom: 10px;
+}
+label{
+    font-size: 20px;
+}
+#searchContainer{
+    background-color: rgb(250, 250, 250);
+    
+}
+#userInput{
+    padding: 3px;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
 }
